# weather-dashboard

./: Cargo.toml
src/: ReadMe.md  main.rs
templates/: index.html
