[package]
name = "weather_dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
askama = "0.12.1"
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"